bug connected with no data icon unvisibility was fixed

--- a/client/styles/pages/_dashboard.scss
+++ b/client/styles/pages/_dashboard.scss
@@ -43,7 +43,7 @@
 
     .box-stats {
         text-align: center;
-        padding-top: 20px; 
+        padding-top: 20px;
         padding-bottom: 20px;
         &.no-border {
             .box-num {
@@ -87,7 +87,7 @@
         margin-bottom: 25px;
     }
 
-    // 
+    //
     .panel-box {
         position: relative;
         border-radius: $border-radius-large;
@@ -131,7 +131,7 @@
         .bg-light {
             background-color: #f9f9f9;
         }
-    }    
+    }
 
 }
 
@@ -147,7 +147,7 @@
             height: 100%;
             width: 100%;
             text-align: center;
-            z-index: -1;
+            z-index: 0;
 
             &_icon, &_text {
                 position: relative;
